# Intelligent-Lighting-System

./: .gitattributes  .gitignore
Controller/: requirements.txt
Controller/src/adapters/: mqtt_adapter.py  rest_adapter.py  vision_adapter.py
Firmware/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Firmware/development_software/: CMakeCache.txt  development_software.code-workspace
Firmware/development_software/src/: LED.cpp  LED.h  ledpwmtest.cpp  main.cpp
Firmware/main/: CMakeLists.txt  LED.cpp  LED.h  config.h  main.cpp
Firmware/main/comms/: mqtt_client.cpp  mqtt_client.h  mqtt_client_wrapper.cpp  mqtt_client_wrapper.h  wifi_client.cpp  wifi_client.h
Firmware/main/examples/: adctesting.cpp  ledpwmtest.h
Firmware/main/hw/: ApplySetpoint.cpp  ApplySetpoint.h  LED.cpp  LED.h  inputs.cpp  inputs.h
Firmware/main/logic/: modes.cpp  modes.h
Firmware/main/logic/setpoint/: LedSetpoint.cpp  LedSetpoint.h  Timeutils.h
Firmware/main/policy/: LightingController.cpp  LightingController.h
Firmware/main/tasks/: task_control.h  task_mqtt.h
Hardware/ESPBoardProject/ESP32/: ESP32.OutJob  ESP32.PrjPcb  (+6 more)
Hardware/Enclosure/: README.md
Mobile/: .gitignore  app.json  app.tsx  package-lock.json  package.json
Mobile/app/: _layout.tsx
Mobile/components/: ParallaxScrollView2.tsx
Mobile/flask_app/: firestore_listener.py
Mobile/mlmodel/: ambient.ipynb  bestfeatures.txt  model.pkl  smart_lighting_dataset_2024(1).csv.xlsx  smart_lighting_dataset_2024.csv.xlsx
development_software/: CMakeCache.txt  CMakeLists.txt
development_software/src/: main.cpp
(+35 files in other folders)
